--- a/index.html
+++ b/index.html
@@ -6,13 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
         <h1> BLOG</h1>
         <ul>
-            
+         
         </ul>
+
     </header>
 </body>
 </html>
+</header>
+<section>
+    <h2>Itália</h2>
+    <p>Itália é um país europeu, tem como sua capital a cidade de Roma, onde também se localiza o Estado do Vaticano.
+    </p>É banhada pelo mar Mediterrâneo. Sua economia é baseada através do turismo e de exportações alimentícias e automobilística. 
+    A Itália se destaca no mundo pela sua culinária de massas.
+<p></p>
+
+</section>
+</body> 
