--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,12 +20,19 @@
 </body>
 </html>
 </header>
-<section>
-    <h2>Itália</h2>
-    <p>Itália é um país europeu, tem como sua capital a cidade de Roma, onde também se localiza o Estado do Vaticano.
-    </p>É banhada pelo mar Mediterrâneo. Sua economia é baseada através do turismo e de exportações alimentícias e automobilística. 
-    A Itália se destaca no mundo pela sua culinária de massas.
-<p></p>
-
-</section>
 </body> 
+<section class="escola">
+    <h2 class="escola-titulo">Itália</h2>
+                <p class="escola-texto-um">Itália é um país europeu, tem como sua capital a cidade de Roma, onde também se localiza o Estado do Vaticano.</p>
+                <p class="escola-texto-dois">É banhada pelo mar Mediterrâneo. Sua economia é baseada através do turismo e de exportações alimentícias e 
+                    automobilística.
+                </p>A Itália se destaca no mundo pela sua culinária de massas.
+                </p>
+               <img class="escola-imagem" src="v" alt="Professora no quadro">
+  </section>
+
+
+
+
+
+ 
