--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Federo&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,16 +24,23 @@
 </header>
 </body> 
 <section class="escola">
+    <div class="escola-div-conteudo"> 
     <h2 class="escola-titulo">Itália</h2>
                 <p class="escola-texto-um">Itália é um país europeu, tem como sua capital a cidade de Roma, onde também se localiza o Estado do Vaticano.</p>
                 <p class="escola-texto-dois">É banhada pelo mar Mediterrâneo. Sua economia é baseada através do turismo e de exportações alimentícias e 
                     automobilística.
                 </p>A Itália se destaca no mundo pela sua culinária de massas.
                 </p>
-               <img class="escola-imagem" src="v" alt="Professora no quadro">
+            </div>
+            
+                <img class="escola-imagem" src="Formula-amico 1 (3).png" alt="Bandeira">
+            
   </section>
-
-
+  <section class=”estudantes”>
+   div <h2 class=”estudante-titulo”>Principais pontos Turísticos e pratos Culinários:</h2>
+    <img class="escola-imagem" src="Marcelo 1 (8).png" alt="Coiseu">
+    <h3 class=”estudante-nome”>Coliseu</h3>
+</section>
 
 
 
